--- a/parser-typechecker/unison-parser-typechecker.cabal
+++ b/parser-typechecker/unison-parser-typechecker.cabal
@@ -282,6 +282,35 @@ executable unison
     build-depends:
       unix
 
+executable unison-lsp-server
+  main-is: Main.hs
+  hs-source-dirs: unison-lsp-server
+  default-language: Haskell2010
+  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-missing-pattern-synonym-signatures -fno-warn-unused-imports -rtsopts
+  build-depends:
+    base,
+    containers,
+    configurator,
+    data-default,
+    directory,
+    errors,
+    filepath,
+    haskell-lsp,
+    hslogger,
+    lens,
+    lens-family-core,
+    megaparsec,
+    mtl,
+    safe,
+    shellmet,
+    template-haskell,
+    temporary,
+    text,
+    transformers,
+    unison-core,
+    unison-parser-typechecker,
+    unix
+
 executable prettyprintdemo
   import: unison-common
   main-is: Main.hs
